core/tests/spec/snapshots/blocks/bullet-list/list-before-paragraph.snap
---
source: core/tests/runner/mod.rs
description: "Parse bullet list followed by paragraph\n"
info: "Test 'list-before-paragraph' from: markup\\blocks\\bullet-list.yml"
---
BulletList(
  BulletListEntry(
    EntryHeading(single list entry)
  )
)
Paragraph(Outer paragraph)
---
With input:

- single list entry

Outer paragraph


