core/tests/spec/snapshots/blocks/bullet-list/single-list-entry.snap
---
source: core/tests/runner/mod.rs
description: "Parse bullet list with one entry\n"
info: "Test 'single-list-entry' from: markup\\blocks\\bullet-list.yml"
---
BulletList(
  BulletListEntry(
    EntryHeading(single list entry)
  )
)
---
With input:

- single list entry


