core/tests/spec/snapshots/blocks/bullet-list/two-list-entries.snap
---
source: core/tests/runner/mod.rs
description: "Parse bullet list with two entries\n"
info: "Test 'two-list-entries' from: markup\\blocks\\bullet-list.yml"
---
BulletList(
BulletListEntry(
first list entry
)
BulletListEntry(
second list entry
)
)
---
With input:

- first list entry
- second list entry


